Version 1.0.1
-----------------------------------------------------------------
10 September 2007
+ Clearing the lorum ipsum text each new page is redundant. Changed
  to only showing on new page.
+ Moved key flag above returning of cached page data.
+ Clearing cache after page edit and deletion.
+ Was using nbsp to fill blank content. This gave false positives in
  the layout. nbsp are only used now for form layout.
+ Javascript changed to add nbsp on blank entry to prevent collapsing
  forms. 
+ Updated files: javascript/update/head.js

7 September 2007
+ Fixed h1 not appearing on home page.
+ Adding caching to page view.

5 September 2007
+ Updated Database's class inclusion function

30 August 2007
+ Front page placement
+ widened the action column in page list
+ New column: ps_page.front_page
+ Updated: templates/page_list.tpl

Version 1.0.0 -- 25 July 2007
------------------------------------------------------------------
8 August 2007
+ Fixed block load on edit

7 August 2007
+ Reduced size of lorum text.
+ Had several problems with editing pages. Should be fixed.

24 July 2007
+ Added created and updated dates to page listing
+ Added search to page listing
+ Fixed header display, tags allowed for headers moved to config file

23 July 2007
+ Changed permission names
+ Page title now appears after typing if included on template
+ Using edit image instead of button
+ Started documentation for creating page templates
+ Some style changes to templates

20 July 2007
+ Added key saving.
+ Added option to delete pages.

28 June 2007
+ Fixed install.sql
+ Copied javascript folder over
+ Created uninstall file

27 June 2007
+ Basic functionality in place. Can create, edit, and view. Little
  else working.
+ New page template added.

13 June 2007
+ Commited foundation