@@ -8,4 +8,5 @@ $errors[PS_TPL_DIR]         = dgettext('pagesmith', 'Could not find any page tem
 $errors[PS_TPL_NO_TITLE]    = dgettext('pagesmith', 'Page template is missing a title.');
 $errors[PS_TPL_NO_TN]       = dgettext('pagesmith', 'Page template is missing a thumbnail.');
 $errors[PS_TPL_NO_SECTIONS] = dgettext('pagesmith', 'Page template did not contain any sections.');
+$errors[PS_PG_TPL_ERROR]    = dgettext('pagesmith', 'An error occurred when trying to load the page template.');
 ?>
