@@ -8,4 +8,5 @@ define('PS_TPL_DIR',         1);
 define('PS_TPL_NO_TITLE',    2);
 define('PS_TPL_NO_TN',       3);
 define('PS_TPL_NO_SECTIONS', 4);
+define('PS_PG_TPL_ERROR',    5);
 ?>
