@@ -1,6 +1,8 @@
 <div id="simple-page">
-   <h1 id="simple-page-title">{page_title}</h1>
+   <div class="box-title"><h1 id="simple-page-title">{page_title}</h1></div>
+   <div class="box-content">
    <!-- BEGIN image1 --><div id="simple-image1">{image1}</div><!-- BEGIN image1 -->
    <!-- BEGIN header1 -->{header1_edit}<h2 id="simple-header1">{header1}</h2><!-- END header1 -->
    {text1_edit}<div id="simple-text1">{text1}</div>
+   </div>
 </div>
